# LBM

./: .gitignore  examples.py  lbm.qmd  profiling.py  pyproject.toml
experiments/: initial_conditions.py  run.py
experiments/conf/: config.yaml
experiments/conf/collision/: bgk.yaml
experiments/conf/equilibrium/: entropic.yaml  extended.yaml  polynomial.yaml
experiments/conf/experiment/: acoustic_case10_double_slit.yaml  acoustic_case11_chirp_dipole.yaml  acoustic_case12_flow_cylinder.yaml  acoustic_case1_monopole.yaml  acoustic_case2_dipole.yaml  acoustic_case3_long_quad.yaml  acoustic_case4_lat_quad.yaml  acoustic_case5_supercardioid.yaml  acoustic_case6_two_monopoles.yaml  acoustic_case7_rotating_dipole.yaml  acoustic_case8_line_source.yaml  acoustic_case9_moving_quad.yaml  cylinder_acoustic.yaml  cylinder_compressible.yaml  double_shear_layer.yaml  shallow_water_dam_break.yaml  sod_subsonic.yaml  sod_transonic.yaml  taylor_green_3d.yaml  taylor_green_3d_q27.yaml
experiments/conf/lattice/: d2q9.yaml  d3q19.yaml  d3q27.yaml
experiments/conf/solver/: acoustic.yaml  compressible.yaml  isothermal.yaml  (+2 more)
jax_tutorial/: dataloader.py  jax_1.ipynb  jax_2.ipynb
lbm/: boundaries.py  collision.py  config.py  data.py  definitions.py  distributions.py  equilibrium.py  fields.py  jax_config.py  lattice.py  lbm.py  obstacles.py  plotting.py  utils.py
lbm/solvers/: __init__.py  acoustic.py  base.py  compressible.py  isothermal.py  multiphase.py  shallow_water.py
lbm/utils/: profiling.py  trace_report.py
notes/: alternate-lbm-schemes.md  zou-he-pressure-bc-plan.md
