[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.0",
    "grain>=0.2.14",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax[cuda13]>=0.8.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "numpy>=2.3.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
